fix(neve): Fix Extra Padding in Menu
2nd try.

--- a/src/scss/overrides/_neve.scss
+++ b/src/scss/overrides/_neve.scss
@@ -158,9 +158,14 @@ footer {
   border-bottom: 1px solid map-neve-color(#f0f0f0);
 }
 
-.header-menu-sidebar .nav-ul li .wrap {
-  /* Too much padding between menu entries. Resetting to 0. */
-  padding: 0;
+.header-menu-sidebar-inner .nav-ul li {
+  padding: 1px 0 !important;
+
+  /* Wrap around collapsible menu items. */
+  .wrap {
+    /* Too much padding between menu entries. Resetting to 0. */
+    padding: 5px 0 !important;
+  }
 }
 
 input[type='text'],
